chore(KFLUXVNGD-212): add annotations to bundles
- Adding annotations to tasks created as bundles
- Migrating to v0.2 because of parameters addition

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/pipelines/tekton-bundle-builder/patch.yaml
+++ b/pipelines/tekton-bundle-builder/patch.yaml
@@ -6,7 +6,7 @@
   path: /spec/tasks/3/taskRef
   value:
     name: tkn-bundle
-    version: "0.1"
+    version: "0.2"
 # Use the template-build as a template replacing the Pipeline name and the
 # `build-container` step's task reference
 # Order of Tasks from the base template:
@@ -40,6 +40,10 @@
     value: $(params.output-image)
   - name: CONTEXT
     value: $(params.path-context)
+  - name: URL
+    value: $(params.git-url)
+  - name: REVISION
+    value: $(params.revision)
 # Remove tasks that assume a binary image
 - op: remove
   path: /spec/tasks/17  # rpms-signature-scan
