--- a/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
+++ b/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
@@ -142,13 +142,17 @@ spec:
       value: $(params.output-image)
     - name: CONTEXT
       value: $(params.path-context)
+    - name: URL
+      value: $(params.git-url)
+    - name: REVISION
+      value: $(params.revision)
     - name: SOURCE_ARTIFACT
       value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
     runAfter:
     - prefetch-dependencies
     taskRef:
       name: tkn-bundle-oci-ta
-      version: "0.1"
+      version: "0.2"
     when:
     - input: $(tasks.init.results.build)
       operator: in
