Update CODEOWNERS for tkn-bundle-builder
Update CODEOWNERS file for `tkn-bundle-builder`
and `tkn-bundle-builder-oci-ta` pipelines

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -209,6 +209,8 @@
     {
       "groupName": "vanguard",
       "matchFileNames": [
+        "pipelines/tekton-bundle-builder-oci-ta/**",
+        "pipelines/tekton-bundle-builder/**",
         "task/build-helm-chart-oci-ta/**",
         "task/build-helm-chart/**"
       ]
