--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -41,8 +41,8 @@
 /task/generate-labels   @konflux-ci/build-maintainers @ralphbean
 
 # renovate groupName=ec
-/task/tkn-bundle                    @konflux-ci/ec @avi-biton @gbenhaim @yftacherzog
-/task/tkn-bundle-oci-ta             @konflux-ci/ec @avi-biton @gbenhaim @yftacherzog
+/task/tkn-bundle                    @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
+/task/tkn-bundle-oci-ta             @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/verify-enterprise-contract    @konflux-ci/ec
 /pipelines/enterprise-contract.yaml @konflux-ci/ec
 /.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
@@ -85,8 +85,10 @@
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
 
 # renovate groupName=vanguard
-/task/build-helm-chart          @amisstea @avi-biton @gbenhaim @yftacherzog
-/task/build-helm-chart-oci-ta   @amisstea @avi-biton @gbenhaim @yftacherzog
+/task/build-helm-chart                      @amisstea @avi-biton @gbenhaim @yftacherzog
+/task/build-helm-chart-oci-ta               @amisstea @avi-biton @gbenhaim @yftacherzog
+/pipelines/tekton-bundle-builder            @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
+/pipelines/tekton-bundle-builder-oci-ta     @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
 
 # renovate groupName=eaas
 /stepactions/eaas-copy-secrets-to-ephemeral-cluster         @konflux-ci/eaas-maintainers
