deprecate old tasks owned by the build team
Expiry date is set to 31st of May
After the deprecation period, they should be removed

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
@@ -4,6 +4,7 @@ kind: Task
 metadata:
   name: prefetch-dependencies-oci-ta
   annotations:
+    build.appstudio.redhat.com/expires-on: "2025-05-31T00:00:00Z"
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
