Apply suggestions from  chmeliik's code review
Co-authored-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
+++ b/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
@@ -173,7 +173,7 @@ spec:
           echo "The script will be executed with network isolation"
           UNSHARE_ARGS+=("--net")
           HERMETO_MOUNT="--volume /var/workdir/cachi2:/cachi2"
-          HERMETO_SOURCE="source /cachi2/cachi2.env &&"
+          HERMETO_SOURCE=". /cachi2/cachi2.env &&"
         fi
 
         # Create the script file
