renovate: group .tekton/* updates
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,12 @@
   },
   "packageRules": [
     {
+      "groupName": "tekton-ci",
+      "matchFileNames": [
+        ".tekton/**"
+      ]
+    },
+    {
       "matchPackageNames": [
         "quay.io/konflux-ci/appstudio-utils"
       ],
