--- a/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
@@ -435,7 +435,43 @@ spec:
 
       if [ -n "${TARGET_STAGE}" ]; then
         BUILDAH_ARGS+=("--target=${TARGET_STAGE}")
+
+        # Search for parent image
+
+        # step 1: try to find the build step with the target as an alias
+        LAST_IMAGE_REF=$(
+          jq --arg alias "${TARGET_STAGE}" '.Stages[] |
+            select(.As==$alias) | .BaseName |
+            select(test("^oci-archive:") | not)' \
+            /shared/parsed_dockerfile.json |
+            tr -d '"' |
+            tr -d "'"
+        )
+
+        # step 2a: If not found, then it is not an alias, but an image spec
+        if [ -z "$LAST_IMAGE_REF" ]; then
+          PARENT_IMAGE="$TARGET_STAGE"
+        fi
+
+        # step 2b: If found, repeat with the new reference until a spec is found
+        while [ -n "$LAST_IMAGE_REF" ]; do
+          # The last image ref in the chain is the parent image
+          PARENT_IMAGE="$LAST_IMAGE_REF"
+          LAST_IMAGE_REF=$(
+            jq --arg alias "${PARENT_IMAGE}" '.Stages[] |
+              select(.As==$alias) | .BaseName |
+              select(test("^oci-archive:") | not)' \
+              /shared/parsed_dockerfile.json | tr -d '"' |
+              tr -d "'"
+          )
+        done
+      else
+        PARENT_IMAGE=$(tail -1 <<<"${BASE_IMAGES}")
       fi
+
+      ARCH_USED=$(uname -m)
+      echo "PARENT_IMAGE: $PARENT_IMAGE"
+      echo "ARCH_USED: $ARCH_USED"
 
       BUILDAH_ARGS+=("${BUILD_ARG_FLAGS[@]}")
 
@@ -471,7 +507,7 @@ spec:
           "$dockerfile_copy"
         echo "Prefetched content will be made available"
 
-        prefetched_repo_for_my_arch="/tmp/cachi2/output/deps/rpm/$(uname -m)/repos.d/cachi2.repo"
+        prefetched_repo_for_my_arch="/tmp/cachi2/output/deps/rpm/${ARCH_USED}/repos.d/cachi2.repo"
         if [ -f "$prefetched_repo_for_my_arch" ]; then
           echo "Adding $prefetched_repo_for_my_arch to $YUM_REPOS_D_FETCHED"
           mkdir -p "$YUM_REPOS_D_FETCHED"
@@ -494,7 +530,7 @@ spec:
 
       DEFAULT_LABELS=(
         "--label" "build-date=$(date -u +'%Y-%m-%dT%H:%M:%S')"
-        "--label" "architecture=$(uname -m)"
+        "--label" "architecture=${ARCH_USED}"
         "--label" "vcs-type=git"
       )
       [ -n "$COMMIT_SHA" ] && DEFAULT_LABELS+=("--label" "vcs-ref=$COMMIT_SHA")
