Use new Conforma image in GitHub CI checks
As mentioned in the previous commit, we have a new Konflux-built
image of Conforma/EC. Let's use it instead of the GitHub built image
for the CI checks also.

Ref: https://issues.redhat.com/browse/EC-913

--- a/.tekton/tasks/ec-checks.yaml
+++ b/.tekton/tasks/ec-checks.yaml
@@ -37,7 +37,7 @@ spec:
       stepactions_dir stepactions-ec
   - name: validate-all-tasks
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/ec-cli:snapshot@sha256:57e14c2ae9591a5bb1e2638ed4c657876ad1889016e8a1a430fd59cb3735da38
+    image: quay.io/enterprise-contract/cli:latest@sha256:966e786a3d8606f4e44de775e3d8e9a679e66c47d35db8f84df02430df921b3e
     script: |
       set -euo pipefail
 
@@ -51,7 +51,7 @@ spec:
       ec validate input --policy "${policy}" --output yaml --strict=true ${args[*]}
   - name: validate-build-tasks
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/ec-cli:snapshot@sha256:57e14c2ae9591a5bb1e2638ed4c657876ad1889016e8a1a430fd59cb3735da38
+    image: quay.io/enterprise-contract/cli:latest@sha256:966e786a3d8606f4e44de775e3d8e9a679e66c47d35db8f84df02430df921b3e
     script: |
       set -euo pipefail
 
@@ -65,7 +65,7 @@ spec:
       ec validate input --policy "${policy}" --output yaml --strict=true ${args[*]}
   - name: validate-step-actions
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/ec-cli:snapshot@sha256:57e14c2ae9591a5bb1e2638ed4c657876ad1889016e8a1a430fd59cb3735da38
+    image: quay.io/enterprise-contract/cli:latest@sha256:966e786a3d8606f4e44de775e3d8e9a679e66c47d35db8f84df02430df921b3e
     script: |
       #!/bin/bash
       set -euo pipefail
