Use Konflux built Conforma/EC in appstudio-utils
Now we have a main branch image for Conforma/EC that is built in
Konflux, let's use it instead of the GitHub built image. The binary
inside should be indentical.

(I'm running this to confirm it, and seeing v0.7.51 in both):
  podman run --rm quay.io/enterprise-contract/ec-cli:snapshot version
  podman run --rm quay.io/enterprise-contract/cli:latest version

Ref: https://issues.redhat.com/browse/EC-913

--- a/appstudio-utils/Dockerfile
+++ b/appstudio-utils/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/enterprise-contract/ec-cli:snapshot AS ec-image
+FROM quay.io/enterprise-contract/cli:latest AS ec-image
 FROM registry.access.redhat.com/ubi9/ubi
 
 COPY --from=ec-image /usr/local/bin/ec_linux_amd64.gz /usr/bin/ec.gz
